--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .header{
     display:flex;
-    flex-direction:row;
-    justify-content:center;
+    flex-direction:column;
+    align-items: center;
 }
 
 .book{
