--- a/style.css
+++ b/style.css
@@ -45,6 +45,21 @@ body{
   border-radius: 20%;
 }
 
+.readbtn{
+  color: white;
+  width: 120px;
+  height: 50px;
+  border-radius: 20%;
+}
+
+.read{
+  background-color:rgb(19, 151, 76)
+}
+
+.unread{
+  background-color: rgb(173, 21, 21);
+}
+
 .book{
     display: flex;
     flex-direction: column;
@@ -139,7 +154,7 @@ body{
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: rgb(173, 21, 21);
     -webkit-transition: .4s;
     transition: .4s;
   }
@@ -157,11 +172,11 @@ body{
   }
   
   input:checked + .slider {
-    background-color: #2196F3;
+    background-color:rgb(19, 151, 76);
   }
   
   input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+    box-shadow: 0 0 1px rgb(19, 151, 76);
   }
   
   input:checked + .slider:before {
