--- a/style.css
+++ b/style.css
@@ -1,77 +1,78 @@
-body{
-  background-color: rgba(0,255, 255);
+body {
+  background-color: rgba(0, 255, 255);
 }
 
-.head{
+.head {
   color: rgb(94, 255, 0);
-  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff, 1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
+  text-shadow: 2px 0 0 #fff, -2px 0 0 #fff, 0 2px 0 #fff, 0 -2px 0 #fff,
+    1px 1px #fff, -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff;
 }
 
-.bookbtn{
+.bookbtn {
   border: 1px white solid;
   border-radius: 25%;
   width: 100px;
   height: 30px;
   background-color: rgba(0, 255, 0);
-  color:white;
+  color: white;
 }
 
-.header{
-    display:flex;
-    flex-direction:column;
-    align-items: center;
-    margin: 8px;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 8px;
 }
 
-.book{
-    width: 250px;
-    height: 300px;
-    border: 3px solid greenyellow;
-    border-radius: 25%;
-    margin: 8px;
-    background-color: rgb(146, 26, 202);
-    color:rgb(171, 248, 47);
+.book {
+  width: 250px;
+  height: 300px;
+  border: 3px solid greenyellow;
+  border-radius: 25%;
+  margin: 8px;
+  background-color: rgb(146, 26, 202);
+  color: rgb(171, 248, 47);
 }
 
-.btn{
+.btn {
   border: none;
 }
 
-.btnremove{
-  background:red;
+.btnremove {
+  background: red;
   color: white;
   width: 90px;
   height: 50px;
   border-radius: 20%;
 }
 
-.readbtn{
+.readbtn {
   color: white;
   width: 120px;
   height: 50px;
   border-radius: 20%;
 }
 
-.read{
-  background-color:rgb(19, 151, 76)
+.read {
+  background-color: rgb(19, 151, 76);
 }
 
-.unread{
+.unread {
   background-color: rgb(173, 21, 21);
 }
 
-.book{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-around;
-    align-items: center;
+.book {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.books{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    flex-direction: column;
-    justify-content:space-around;
+.books {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .switch {
@@ -88,7 +89,7 @@ body{
   position: relative;
   text-align: center;
   width: 100%;
-  background-color:rgba(0, 0, 0, 0.5)
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .formPopup {
@@ -104,16 +105,16 @@ body{
   background-color: #fff;
 }
 
-.formContainer input[type=text],
-.formContainer input[type=number] {
+.formContainer input[type="text"],
+.formContainer input[type="number"] {
   padding: 15px;
   margin: 5px 0 20px 0;
   border: none;
   background: #eee;
 }
 
-.formContainer input[type=text]:focus,
-.formContainer input[type=password]:focus {
+.formContainer input[type="text"]:focus,
+.formContainer input[type="password"]:focus {
   background-color: #ddd;
   outline: none;
 }
@@ -137,59 +138,59 @@ body{
 .openButton:hover {
   opacity: 1;
 }
-  
-  /* Hide default HTML checkbox */
-  .switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-    margin: 8px;
-  }
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgb(173, 21, 21);
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color:rgb(19, 151, 76);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px rgb(19, 151, 76);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  margin: 8px;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgb(173, 21, 21);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: rgb(19, 151, 76);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px rgb(19, 151, 76);
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
